--- a/css/style.css
+++ b/css/style.css
@@ -14,27 +14,24 @@
 
 body
 {
-    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     width: 100%;
     padding: 1.5rem;
-    color: white;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
+    
     background-color:var(--Pink);
     background-image: url("../images/bg-intro-desktop.png");
+
+    font-family: 'Poppins', sans-serif;
+    color: white;
+
 }
 
 
 
-.container
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
+
 
 
 .container__formSection, .container__text
@@ -49,9 +46,7 @@ body
     max-inline-size: 20rem;
     text-align: center;
     line-height: 2rem;
-
-    margin-top: 3rem;
-    margin-bottom: 1rem;
+    margin: 3rem auto 1rem auto;
 }
 
 .container__p{
@@ -90,6 +85,20 @@ body
     padding: .5rem;
 }
 
+.inputWrapper
+ {
+    display: flex;
+    flex-direction: column;
+ }
+.badinputMessage
+{
+    color: var(--Pink);
+    font-size: .5rem;
+    font-style: italic;
+    align-self: flex-end;
+    font-weight: 600;
+    margin-top: .5rem;
+}
 
 .freeTrialForm__input--invalid{
  background-image: url("../images/icon-error.svg");
@@ -182,7 +191,9 @@ body
 
 .container
 {
+    display: flex;
     flex-direction: row;
+    align-items:center;
 }
 
 .container__formSection >*
